<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:screenOrientation="landscape" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/ip"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="27dp"
        android:background="#98FB98"
        android:text="@string/power2" />

    <Button
        android:id="@+id/button5"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button6"
        android:layout_alignBottom="@+id/button6"
        android:layout_marginRight="39dp"
        android:layout_toLeftOf="@+id/button6"
        android:background="#87CEFA"
        android:text="@string/power1" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button5"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="16dp"
        android:background="#ffffff"
        android:text="@string/down" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_toRightOf="@+id/button4"
        android:background="#ffffff"
        android:text="@string/right" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_toLeftOf="@+id/button1"
        android:background="#ffffff"
        android:text="@string/left" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button4"
        android:layout_marginBottom="16dp"
        android:background="#ffffff"
        android:text="@string/up" />

</RelativeLayout>